Adjust app-header position to align correctly and update dropdown menu position for improved layout consistency

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@ main {
 
 app-header {
   position: fixed;
-  top:-15px;
+  top:0px;
   left: 0;
   width: 100%;
   z-index: 10000;
